--- a/src/Section/style.css
+++ b/src/Section/style.css
@@ -1,7 +1,7 @@
 .section {
     max-width: 700px;
     background-color: #eee;
-    padding: 20px 0px;
+    padding: 20px;
     border-radius: 25px;
     margin: 20px auto;
     color: #128b12;
@@ -16,5 +16,5 @@
 
 .section__legend {
     font-size: 10px;
-    padding-left: 20px;
+    padding-left: 30px;
 }
