--- a/src/Form/style.css
+++ b/src/Form/style.css
@@ -52,6 +52,7 @@
     text-align: center;
     font-size: 16px;
     border-radius: 10px;
+    box-shadow: 0px 0px 5px 1px #9c9c9c;
 }
 
 .form__button:hover {
