--- a/src/Form/style.css
+++ b/src/Form/style.css
@@ -2,6 +2,12 @@
     text-align: center;
 }
 
+@media (max-width: 767px) {
+    .form {
+        overflow: auto;
+    }
+}
+
 .form__legend {
     text-align: left;
     padding: 5px 10px;
@@ -22,11 +28,11 @@
     box-shadow: 0px 0px 5px 1px #9c9c9c;
 }
 
-.form__label {
-    display: inline-block;
-    width: 300px;
-    padding: 0 10px;
-    margin-left: 5px;
+.form__flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .form__input {
@@ -43,7 +49,6 @@
 }
 
 .form__button {
-    width: 400px;
     background-color: #e1fdf4;
     border: none;
     font-family: 'Montserrat', sans-serif;
