--- a/src/Footer/style.css
+++ b/src/Footer/style.css
@@ -7,6 +7,7 @@
     margin: 20px auto;
     display: flex;
     justify-content: space-around;
+    align-items: center;
     letter-spacing: 0.2em;
     box-shadow: 0px 0px 5px 1px #9c9c9c;
 }
