--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ html {
 
 body {
   font-family: 'Montserrat', sans-serif;
-  background-image: url("/public/currency_background.jpeg");
+  background-image: url("/public/currency_background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
