Improved responsiveness for screens smaller than 400px in form styling

--- a/src/Form/style.css
+++ b/src/Form/style.css
@@ -8,6 +8,18 @@
     }
 }
 
+@media (max-width: 400px) {
+    .form {
+        .form__fieldset{
+            margin: 5px;
+        }
+        .form__input {
+            width: 100px;
+            padding: 5px;
+        }
+    }
+}
+
 .form__legend {
     text-align: left;
     padding: 5px 10px;
